amended mobile view

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 	<div class="container">
 		<div class="row">
-		<div id="tmonth" class="month col-md-5 align-self-start">
+		<div id="tmonth" class="month col-12 col-md-5 align-self-start">
 			<div id="thead" class="head container"></div>
 			<div class="weekdays row">
 				<div class="col">Mo</div>
@@ -24,8 +24,8 @@
 			</div>
 			<div id="tdays" class="days row"></div>
 		</div>
-		<div id="history" class="col-md-2 align-self-center border border-warning rounded"><span >Clear notes</span></div>
-		<div id="nmonth" class="month col-md-5 align-self-start">
+		<div id="history" class="col-md-2 mt-5 align-self-center border border-warning rounded"><span >Clear notes</span></div>
+		<div id="nmonth" class="month col-12 col-md-5 align-self-start">
 			<div id="nhead" class="head container"> </div> 
 			<div class="weekdays row">
 				<div class="col">Mo</div>
